--- a/src/assets/dashboard.css
+++ b/src/assets/dashboard.css
@@ -918,15 +918,16 @@ div.root.AppBarSearchInput {
      display: flex;
 }
 /* ---------------------------------------- */
+/* ⬜ Use MuiTypography + classname to input this in overrides */
 .componentsInputText {
-     font-family: 'Lato';
-     font-size: 0.8rem;
-}
- .componentsHelperText {
-     font-family: 'Lato';
-     font-size: 0.6rem;
-     line-height: 0.6rem;
-     color: #334343;
+    font-family: 'Lato';
+    font-size: 0.8rem;
+  }
+.componentsHelperText {
+          font-family: 'Lato';
+          font-size: 0.6rem;
+          lineHeight: 0.6rem;
+          color: #334343;
 }
 
 /* ---------------------------------------- */
@@ -1074,4 +1075,432 @@ pre.console-log {
   display: flex;
   align-content: center;
   column-gap: 0.4rem;
-  margi
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.feedback .mood-icon {
+  padding: 2px;
+  padding-top: 1rem; /* space for tooltip */
+  transition: transform 200ms cubic-bezier(.5,-1,.5,2), filter 150ms ease-in-out, opacity 1500ms ease-in-out;
+  filter: blur(1.5px);
+  opacity: 0.5;
+  z-index: 10;
+}
+.feedback .mood-icon > img {
+    height: 2rem;
+    width: 2rem;
+}
+.feedback .mood-icon:hover {
+  transform: scale(1.12);
+  filter: blur(0);
+  opacity: 0.7;
+}
+.feedback .glowing-background {
+  background: linear-gradient(179.3deg, #FFD239 3.97%, rgba(255, 201, 51, 0.24) 58.23%, #E82992 106.1%);
+  filter: blur(30px);
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
+  z-index: 0;
+}
+.feedback .mood-tooltip {
+  position: absolute;
+  top: -1.4rem;
+  z-index: 100;
+  background: var(--color-text-primary);
+  font-size: 0.9rem;
+  color: var(--color-button-text);
+  border-radius: 8px;
+  padding: 3px 10px;
+  display: none;
+}
+.feedback .mood-label {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+}
+.feedback .mood-label > input {
+  position: absolute;
+  opacity: 0;
+}
+
+.feedback .mood-label input:checked ~ .mood-tooltip,
+.feedback .mood-label input:hover ~ .mood-tooltip {
+  display: block;
+}
+
+.feedback .mood-label input:checked ~ .mood-icon {
+  filter: blur(0);
+  border-color: var(--color-button-text);
+  transform: scale(1.315);
+  opacity: 1;
+}
+
+.feedback .mood-label input:checked ~ .glowing-background {
+    opacity: 1;
+}
+/* --------------------------------------------------------- */
+/* stage */
+/* --------------------------------------------------------- */
+:root {
+  --feedback-stage-width: 350px;
+  --feedback-stage-height: 339px;
+}
+.actor.thank-you,
+.feedback-modal.root {
+  background: var(--color-background-feedback);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid var(--color-box-border);
+  border-radius: var(--default-radius);
+  padding: 1.5rem;
+  box-sizing: border-box;
+  max-height: unset;
+  height: var(--feedback-stage-height);
+  width: var(--feedback-stage-width);
+  flex-wrap: nowrap;
+}
+.feedback-modal.root > .header {
+  width: 100%;
+}
+.feedback-modal.root > .header > .heading {
+  font-weight: 500;
+  margin-bottom: 0.4rem;
+  color: var(--color-text-primary);
+  white-space: normal;
+  text-align: center;
+  width: 100%;
+  margin-right: -1rem;
+}
+.feedback-modal.root > .header > .close-button {
+  border: none;
+  color: var(--color-text-primary);
+  background: none;
+  cursor: pointer;
+  outline: none;
+  transform: translate(0.8rem, -0.1rem);
+  align-self: flex-start;
+  /* position: absolute; */
+  /* right: 1rem; */
+}
+/* parent is stage.root with relative positioning */
+.stage.button {
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    right: 0;
+}
+/* starting position of the feedback form */
+.stage.feedback {
+    position: absolute;
+    right: 0;
+    top: var(--animation-top-origin-feedback);
+    transform: var(--animation-start-feedback);
+    opacity: 0;
+    z-index: 1;
+}
+
+.stage.feedback .relative,
+.actor.thank-you {
+    position: relative;
+}
+.stage-root {
+  width: var(--feedback-stage-width);
+  height: var(--feedback-stage-height);
+  position: relative;
+  contain: content;
+}
+.stage-root.left-up {
+  --animation-enter-feedback: enter-feedback-left-up;
+  --animation-exit-feedback: exit-feedback-left-up;
+  --animation-start-feedback: translateX(400px);
+  --animation-top-origin-feedback: calc(-1 * var(--feedback-stage-height) + 2rem);
+}
+.stage-root.left-down {
+  --animation-enter-feedback: enter-feedback-left-down;
+  --animation-exit-feedback: exit-feedback-left-down;
+  --animation-start-feedback: translateY(-200px);
+  --animation-top-origin-feedback: 0px;
+}
+
+/* grid-item and parent  */
+.on-stage {
+  position: relative;
+}
+.on-stage > * {
+    position: absolute
+}
+.single-grid {
+  display: grid;
+  place-items: center center;
+  grid-template-columns: 1fr;
+  grid-template-rows: minmax(0, 1fr);
+  height: inherit;
+  width: inherit;
+}
+.single-grid-child {
+  grid-area: 1 / 1 / -1 / -1;
+  height: inherit;
+  width: inherit;
+}
+/* end stage ---------------------- */
+
+.actor.thank-you {
+  visibility: hidden;
+  top: 0;
+  left: 0;
+}
+.actor.thank-you > .frame {
+  align-items: center;
+  margin: auto
+}
+.actor.thank-you svg {
+  font-size: 100px;
+  color: var(--color-secondary-main);
+}
+.actor.thank-you .heading {
+  font-weight: 500;
+  margin-bottom: 0.4rem;
+  white-space: normal;
+  text-align: center;
+  width: 100%;
+}
+/* submit state */
+.actor.thank-you.submit {
+  visibility: visible;
+}
+.actor.feedback.submit {
+  visibility: hidden;
+}
+/* ----------------------------------------- */
+/* slide-in the feedback form */
+@keyframes enter-feedback-left-down {
+    0% { opacity: 0; }
+    70% { opacity: 1; }
+    100% {
+        transform: translateY(50px);
+        opacity: 1;
+    }
+}
+@keyframes exit-feedback-left-down {
+    0% {
+        transform: translateY(50px);
+        opacity: 1;
+    }
+    90% { opacity: 1; }
+    100% {
+        transform: translateY(-360px);
+        opacity: 0;
+    }
+}
+/* ----------------------------------------- */
+@keyframes enter-feedback-left-up {
+    0% { opacity: 0; }
+    70% { opacity: 1; }
+    100% {
+        transform: translateX(-80px);
+        opacity: 1;
+    }
+}
+@keyframes exit-feedback-left-up {
+    0% {
+        transform: translateX(-80px);
+        opacity: 1;
+    }
+    70% { opacity: 0; }
+    100% {
+        transform: translateX(200px);
+        opacity: 0;
+    }
+}
+/* ----------------------------------------- */
+/* subject of the animation */
+.stage.feedback.enter {
+    animation-name: var(--animation-enter-feedback);
+    animation-duration: 0.5s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+}
+.stage.feedback.exit {
+    animation-name: var(--animation-exit-feedback);
+    animation-duration: 0.5s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+}
+
+/* end feedback */
+
+/* --------------------------------------------------------- */
+/* Floating button */
+/* --------------------------------------------------------- */
+.floating-actions {
+    position: absolute;
+    bottom: 200px;
+    right: 1.5rem;
+}
+.floating-actions.hidden {
+    visibility: hidden;
+}
+.fab.calendar {}
+.fab.feedback {}
+
+/* --------------------------------------------------------- */
+/* Project Meta - artifacts */
+/* --------------------------------------------------------- */
+.project-page.root {
+    margin: var(--page-margin);
+}
+.project-artifacts {
+    max-width: 500px;
+}
+
+/* --------------------------------------------------------- */
+.project-artifact.root {
+    /* shared context */
+    --avatar-fill-color: var(--color-primary-main);
+    --avatar-background-color: var(--color-primary-superLight);
+    --opacity: 1;
+}
+.project-artifact.root.disabled {
+    /* shared context */
+    --opacity: 0.5;
+    pointer-events: none;
+}
+.project-artifact.root:hover {
+    /* shared context */
+    --avatar-fill-color: var(--color-primary-dark);
+    --avatar-background-color: var(--color-primary-main);
+}
+/* --------------------------------------------------------- */
+.project-artifact.root > .link {
+    text-decoration: none;
+    cursor: pointer;
+}
+.artifact.text > span:hover {
+}
+.project-artifact.root.disabled > .link {
+    cursor: default;
+    opacity: 0.3;
+}
+.artifact.text > p {
+    text-decoration: none;
+}
+.artifact.text > p:hover {
+    text-decoration: none;
+}
+.project-artifact {
+    gap: 1.5rem;
+}
+.artifact.avatar {
+    padding-top: 0.5rem;
+}
+.artifact.avatar > div {
+    /* svg frame */
+    background-color: var(--avatar-background-color);
+}
+.artifact.avatar > div > svg {
+    fill: var(--avatar-fill-color);
+}
+.project-artifact .MuiListItemText-primary {
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: var(--color-text-strong);
+}
+.project-artifact .MuiListItemText-secondary {
+}
+/*
+ * Debugging layout markers
+ */
+.size {
+    display: none;
+}
+.marker {
+  position: absolute;
+  width: 50px;
+  height: 2px;
+  z-index: 1099;
+}
+.marker.top {
+  right: 4px;
+  background: cyan;
+  top: var(--main-view-top);
+}
+.marker.bottom {
+  right: 4px;
+  background: #f433ff;
+  bottom: var(--main-view-bottom);
+}
+.marker.top.computed {
+  top: calc(0vh + var(--main-view-top));
+  right: 24px;
+  background: #000;
+}
+/* ----------------------------------------
+ * Design process
+ */
+ul[title]::before {
+  content: attr(title);
+  /* then add some nice styling as needed, eg: */
+  display: block;
+  font-weight: bold;
+  padding: 4px;
+  padding-left: 0px;
+  margin-left: -10px;
+}
+.next-steps ul {
+  list-style-position: outside;
+  margin-left: -20px;
+}
+.next-steps ul > li {
+  font-size: 12px;
+}
+.done {
+  text-decoration: line-through;
+}
+/* ---------------------------------------- */
+.message {
+  font-size: 30px;
+}
+/* Style the navbar */
+/* Page content */
+.content {
+  padding: 16px;
+}
+
+/* other css */
+.left-align {
+  margin: 0 auto 0 0;
+  display: block;
+  width: fit-content;
+}
+.right-align {
+  margin: 0 0 0 auto;
+  display: block;
+  width: fit-content;
+}
+.center-align {
+  margin: 0 auto 0 auto;
+  display: block;
+  width: fit-content;
+}
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 60px;
+}
